--- a/firebase.json
+++ b/firebase.json
@@ -6,7 +6,8 @@
     "public": "/",
     "ignore": [
       "firebase.json",
-      "node_modules/**"
+      "node_modules/**",
+      "farm/**"
     ],
     "rewrites": [
       {
